# Fomalhaut.jl

./: .gitignore  Project.toml  README.md
Fomalhaut/: Project.toml
Fomalhaut/src/: FFI.jl  Fomalhaut.jl  Routing.jl  Server.jl  Types.jl
Fomalhaut/test/: runtests.jl
fomalhaut_rs/: .gitignore  Cargo.toml
fomalhaut_rs/src/: lib.rs  main.rs
fomalhaut_rs/src/database/: handlers.rs  mod.rs
fomalhaut_rs/src/ffi/: callbacks.rs  errors.rs  mod.rs  routes.rs  server.rs
fomalhaut_rs/src/protocol/: envelope.rs
fomalhaut_rs/src/runtime/: state.rs
fomalhaut_rs/src/transport/: http_server.rs  ipc_reader.rs  mod.rs  websocket.rs  websocket_server.rs
scripts/: ascii_art_fomalhaut.jl  benchmark_native_vs_julia.jl  benchmark_sea_route_vs_julia.jl  test_fmhut_axis_websocket.jl  test_fmhut_delete.jl  test_fmhut_get.jl  test_fmhut_http_methods.jl  test_fmhut_patch.jl  test_fmhut_post.jl  test_fmhut_put.jl  test_fmhut_sea_route.jl  test_orm_general_all.jl  test_orm_sea_all.jl  test_sea_orm_workflow.jl
