[package]
name = "fomalhaut_rs"
version = "0.1.0"
edition = "2024"

[lib]
# Build a C-compatible dynamic library for Julia `ccall`
crate-type = ["cdylib", "rlib"]

[[bin]]
# use below to avoid `fomalhaut_rs` name conflict when running `cargo build --release`
name = "fomalhaut_cli"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.32"
libc = "0.2.177"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
